# tauri-ma-controller

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_writer.rs  instrument_comm.rs  main.rs  packets.rs  packets_deku.rs  packets_old.rs  plate.rs
src/app/: page.js
