[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
arrow-array = "53.0.0"
arrow-schema = "53.0.0"
anyhow = "1.0.86"
chrono = "0.4.38"
deku = { version = "0.18.1", default-features = false, features = ["std"] }
futures = "0.3.30"
num-derive = "0.4"
num-traits = "0.2"
parquet = { version = "53.0.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6.2", features = [] }
tokio = { version = "1.37.0", features = ["time", "net", "macros"] }
tokio-util = "0.7.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
